@@ -5,7 +5,7 @@
        provider-name="lzoubek">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.stream.resolver" version="1.0.0"/>
+    <import addon="script.module.stream.resolver" version="1.0.3"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              provides="video"
